# mlops_project_lab

./: .gitignore  README.md  conda.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  deploy_model.yml  reusable_create_release.yml  reusable_create_tag.yml  reusable_lint.yml  reusable_pr_comment.yml  reusable_semantic_version.yml
scripts/: create_inference_data.py  register_model.py  run_inference_pipeline.py  test_model.py  train_model.py  upload_data.py  verify_azure_connection.py
src/: score.py
