[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitops-lab-workflow"
version = "0.1.0"
description = "GitOps Workflow Lab - MLOps Course UTEC"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | build
    | dist
    | __pycache__
    | \.eggs
    | artifacts
    | data
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = [".git", "venv", ".venv", "__pycache__", "artifacts", "data"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "venv", ".venv", "__pycache__", "build", "dist", "artifacts", "data"]

[tool.pylint.messages_control]
disable = [
    "C0114",
    "C0115",
    "C0116",
    "R0903",
    "W0511",
    "E0401",
    "R0801",
    "R0914",
    "W0718",
    "C0103",
]

[tool.pylint.format]
max-line-length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "build", "dist", "artifacts", "data"]
